--- a/.github/workflows/build-manager.yml
+++ b/.github/workflows/build-manager.yml
@@ -1,15 +1,6 @@
 name: Build Manager
-on:
-  push:
-    branches: [ "main" ]
-    paths: 
-      - '.github/workflows/build-manager.yml'
-      - 'manager/**'
-      - 'userspace/ksud/**'
-  pull_request:
-    branches: [ "main" ]
-    paths: 
-      - 'manager/**'
+on: workflow_dispatch
+
 jobs:
   build-ksud:
       uses: ./.github/workflows/build-ksud.yml
